# threadsaw

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SBOM.cdx.json  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION_REFERENCE.md  DATABASE_AND_OUTPUTS.md  DECISIONS.md  DEPENDENCIES_AND_LICENSING.md  DOCUMENTATION_INDEX.md  EVALUATE_PHISHING_EMAIL.md  EVALUATOR_REFERENCE.md  FILE_REFERENCE.md  GITHUB_RELEASE_CHECKLIST.md  GUI.md  INSTALLATION_AND_DEPLOYMENT.md  LARGE_CASES.md  MODULE_REFERENCE.md  PHISH_HUNT.md  PROTOTYPE_STATUS.md  RELEASE_NOTES_0.2.2.md  RELEASE_NOTES_0.2.3.md  RELEASE_NOTES_0.2.4.md  RELEASE_NOTES_0.2.5.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.3.2.md  RELEASE_NOTES_0.3.3.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md  RELEASE_STATUS.md  ROADMAP.md  SECURITY_AND_FORENSICS.md  STRING_SEARCH.md  TESTING_1.3.0.md  TESTING_AND_VALIDATION.md  THREADSAW_1.0.0_MANUAL.md  (+4 more)
docs/getting-started/: LINUX.md  MACOS.md  WINDOWS.md
examples/: make_sample_eml.py  phish_hunt_prototype.json
examples/phish_hunt_presets/: external_phishing.json  general_phishing.json  internal_phishing.json
launcher/: threadsaw_gui.py
scripts/: generate-container-sbom.sh
src/threadsaw/: __init__.py  archive_inspection.py  attachments.py  case.py  case_context.py  (+22 more)
tests/: test_1_1_features.py  test_1_2_features.py  test_1_3_features.py  test_attachment_extension_filter.py  test_cli.py  test_counts_sharepoint_and_evaluators.py  test_database.py  test_evaluate_email.py  test_launcher.py  test_phish_hunt.py  test_security.py  test_string_search.py  test_timestamped_outputs.py  test_workflow.py
(+3 files in other folders)
