[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threadsaw"
version = "1.3.0"
description = "Case-based email triage for Business Email Compromise investigations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Threadsaw project"}]
dependencies = ["opencv-python-headless==4.13.0.92", "pypdfium2==5.11.0"]

[project.optional-dependencies]
msg = ["extract-msg==0.55.0"]
dev = ["pytest==9.1.1", "build==1.3.0"]

[project.scripts]
threadsaw = "threadsaw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
threadsaw = ["data/*.dat"]
